--- a/public/searchRecipe.html
+++ b/public/searchRecipe.html
@@ -131,5 +131,8 @@
     ingredients = ingredientsArr.join(",+");
 
     // call to spoonacularAPI.js
+    $.getScript("public/apiCalls/spoonacularAPI.js", success(response, status));
+    console.log(response)
+    console.log(status);
   })
 </script>
