--- a/public/signup.html
+++ b/public/signup.html
@@ -10,9 +10,20 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default nav">
     <div class="container-fluid">
       <div class="navbar-header">
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Sing Up</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Log In</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/searchRecipe">Search Recipes</a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
