Commented out style.css for now, adjusted navbar looks on pages

--- a/public/signup.html
+++ b/public/signup.html
@@ -15,7 +15,7 @@
       <div class="navbar-header">
         <ul class="nav nav-tabs">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Sing Up</a>
+            <a class="nav-link active" href="#">Sign Up</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/login">Log In</a>
