Added script link to spoonacularAPI

--- a/public/searchRecipe.html
+++ b/public/searchRecipe.html
@@ -112,6 +112,7 @@
   </div>
 
 </body>
+<script src="./apiCalls//spoonacularAPI.js"></script>
 <script type="text/javascript">
   $(".searchRecipe").on("click", function (search) {
     search.preventDefault();
