--- a/public/login.html
+++ b/public/login.html
@@ -10,19 +10,19 @@
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="background2">
   <header class="shadow-sm">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
           <ul class="nav nav-tabs">
-            <li class="nav-item">
-              <a class="nav-link active" href="/">Sign Up</a>
+            <li class="nav-item navbar1">
+              <a class="nav-link " href="/">Sign Up</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Log In</a>
+              <a class="nav-link active" href="#">Log In</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item navbar1">
               <a class="nav-link" href="/searchRecipe">Search Recipes</a>
             </li>
           </ul>
@@ -30,8 +30,11 @@
       </div>
     </nav>
   </header>
+
+  <p class="around">Leftover Wizard</p>
+
   <div class="container">
-    <div class="row">
+    <div class="row fontwhite">
       <div class="col-md-6 col-md-offset-3">
         <h2>Login Form</h2>
         <form class="login">
