--- a/public/members.html
+++ b/public/members.html
@@ -10,17 +10,17 @@
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="background2">
   <header class="shadow-sm">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
           <ul class="nav nav-tabs">
-            <li class="nav-item">
-              <a class="nav-link active" href="/">Sign Up</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/logout">Logout</a>
+           <!-- <li class="nav-item">
+              <a class="nav-link " href="/">Sign Up</a>
+            </li>-->
+            <li class="nav-item ">
+              <a class="nav-link active" href="/logout">Logout</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/searchRecipe">Search Recipes</a>
@@ -30,10 +30,11 @@
       </div>
     </nav>
   </header>
+  <p class="around">Leftover Wizard</p>
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Welcome <span class="member-name"></span></h2>
+        <h2 class="fontwhite">Welcome <span class="member-name"></span></h2>
       </div>
     </div>
   </div>
