--- a/public/searchRecipe.html
+++ b/public/searchRecipe.html
@@ -9,7 +9,7 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <link href="stylesheets/style.css" rel="stylesheet">
+  <link href="stylesheets/style.css" rel="stylesheet">
 
 </head>
 
@@ -35,7 +35,7 @@
   </header>
   <p class="around">Leftover Wizard</p>
 
-  
+
   <div class="container background">
 
     <div class="row">
@@ -91,9 +91,9 @@
     // call to spoonacularAPI.js
     recipes = await SearchbyIngredientQuery(ingredients, await getAPIKey());
     // logs results of API call
-    console.log(recipes);
-   var title = `<h2 class=" fontwhite"> RECIPE WITH ${input} </h2>`
-   $(".card-deck").append(title);
+    // console.log(recipes);
+    var title = `<h2 class=" fontwhite"> RECIPE WITH ${input} </h2>`
+    $(".card-deck").append(title);
     // generate dynamic elements to display results on page
     $(".card-deck").empty();
     for (let i = 0; i < recipes.length; i++) {
@@ -112,32 +112,28 @@
           event.preventDefault();
           $("#resultDisplay").empty();
           // console.log($(this));
-          console.log('button ID==>>', $(this).attr("id"));
+          // console.log('button ID==>>', $(this).attr("id"));
           let btnID = $(this).attr("id")
           recipe = await SearchbyRecipeID(btnID, await getAPIKey());
           console.log('recipe==>>', recipe);
           const { title, image, sourceUrl, cookingMinutes, instructions, extendedIngredients, summary } = recipe;
-          const steps = extendedIngredients[0].steps;
-
-
-          // obj.analyzedInstructions[0].steps[i] where I is index of the instructions
-          // $("#resultDisplay").append(viewFullRecipe(recipe));
-         // var element = `
-         //   <div class=" jumbotron-fluid">
-         //     <h2 class="fontwhite"> ${title} </h2>
-         //     <img src=${image} class="card-img-top" alt="dish_image">
-         //     <p class="card-text">Cook Time:${cookingMinutes} </p>
-         //     <p class="card-text">Instructions:</p>
-         //     <p class="card-text"> 
-         //         <a href=${sourceUrl} class="btn btn-primary button1">Go to source</a>
-         //     </p>
-         //   </div>
-            var element = `
+          const ings = extendedIngredients;
+          console.log('ingredients==>>', ings);
+          // grab ings[i].
+          //      original
+          let ingDisplay = ``;
+          for (let i = 0; i < ings.length; i++) {
+            ingDisplay += `<li>${ings[i].original}`;
+          }
+          var element = `
             <div class="grid-container">
              <div class="grid-item item1"><h2>${title}</h2></div>
              <div class="grid-item item2"><img src=${image} class="img1" width="460" height="345"></div>
-             <div class="grid-item item3"><p class="pIngredient">Cook Time:${cookingMinutes} minutes </p><br>
+             <div class="grid-item item3">
               <p class="pIngredient">Ingredients:</p>
+              <ul>
+                ${ingDisplay}
+                </ul>
               </div>  
              <div class="grid-item item5"><p class="pIngredient">Instruction</p>
               <p class="pInstructions">${instructions}</p>
