--- a/public/members.html
+++ b/public/members.html
@@ -96,19 +96,19 @@
             // console.log('button ID==>>', $(this).attr("id"));
             let btnID = $(this).attr("id")
             recipe = await SearchbyRecipeID(btnID, await getAPIKey());
-            console.log('recipe==>>', recipe);
+            // console.log('recipe==>>', recipe);
             const { title, image, sourceUrl, cookingMinutes, instructions, extendedIngredients, summary } = recipe;
             const ings = extendedIngredients;
-            console.log('ingredients==>>', ings);
+            // console.log('ingredients==>>', ings);
             // grab ings[i].
             //      original
             let ingDisplay = ``;
             for (let i = 0; i < ings.length; i++) {
               ingDisplay += `<li>${ings[i].original}`;
             }
-            var element = `
+            var recipeDetails = `
               <div class="grid-container">
-               <div class="grid-item item1"><h2>${title}</h2></div>
+               <div class="grid-item item1"><h2 id="title">${title}</h2></div>
                <div class="grid-item item2"><img src=${image} class="img1" width="460" height="345"></div>
                <div class="grid-item item3">
                 <p class="pIngredient">Ingredients:</p>
