css changes to the background images

--- a/public/login.html
+++ b/public/login.html
@@ -10,7 +10,7 @@
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
-<body class="background2">
+<body class="login-bg">
   <header class="shadow-sm">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
