--- a/public/searchRecipe.html
+++ b/public/searchRecipe.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body class="background2">
+<body class="search-bg">
   <header class="shadow-sm ">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
