Finalized loading saved recipes per user

--- a/public/members.html
+++ b/public/members.html
@@ -20,7 +20,7 @@
               <a class="nav-link active" href="/logout">Logout</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/searchRecipe">Search Recipes</a>
+              <a class="nav-link" href="/viewRecipe">View Recipes</a>
             </li>
           </ul>
         </div>
@@ -58,7 +58,6 @@
     <div class="row" id="resultDisplay">
 
     </div>
-  </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
