style in viewRecipes

--- a/public/viewRecipes.html
+++ b/public/viewRecipes.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <!-- Div below displays recipe info-->
-        <div class="card-deck row">
+        <div class="card-deck row grid-item">
 
         </div>
     </div>
